--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,8 @@ image: gitpod/workspace-full:latest
 # List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
 tasks:
   - name: Script Task
-  - init: npm i -g @angular/cli && cd angular-blog && code . # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
-    command: echo 'start script'
+  - init: cd league-blog && npm i && npm start   # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
+    command: ''
 
 # List the ports to expose. Learn more: https://www.gitpod.io/docs/configure/workspaces/ports
 ports:
